# Benchmark_electron

./: .gitignore  Cargo.toml  DEPENDENTS.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml  bench.yml
apps/cpu_intensive/: README.md  package.json
apps/cpu_intensive/Source/: index.js  preload.js  site.js  worker.js
apps/file_transfer/: package.json
apps/file_transfer/Source/: index.js  json_3mb.json  preload.js
apps/hello_world/: package.json
apps/hello_world/Source/: index.js
bench/: main.rs  utils.rs
bench/tools/: Cargo.toml
bench/tools/Source/: build_benchmark_jsons.rs
