[workspace]
members = [".", "bench/tools"]

[package]
name = "electron-bench"
version = "0.1.0"
authors = ["Tauri Programme within The Commons Conservancy"]
edition = "2018"
license-file = "LICENSE"
description = "Cross-platform WebView rendering library"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0.95" }
chrono = { version = "0.4.39" }
tempfile = { version = "3.14.0" }

[[bench]]
name = "electron_bench"
harness = false
path = "./bench/main.rs"
