[[bench]]
harness = false
name = "electron_bench"
path = "./bench/main.rs"

[dev-dependencies]
anyhow = { version = "1.0.95" }
chrono = { version = "0.4.39" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tempfile = { version = "3.16.0" }

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Cross-platform WebView rendering library"
edition = "2018"
license-file = "LICENSE"
name = "electron-bench"
version = "0.1.0"

[workspace]
members = [".", "bench/tools"]
